src/components/Header/Header.scss
@import '../../App.scss';
.menu-bar {
    height: 68px;
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    transition: background-color 0.5s ease;
}

.menu-bar-container {
    position: sticky;
    top: 0;
    z-index: 1;
}

.nav-bar {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 95%;
    margin: 0 auto;
}

.menu-items {
    a {
        color: white;
        font-size: .9rem;
    }
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex: 9;
}

.logo {
    color: $netflix-red;
    font-size: 1.8em;
    font-weight: 600;
    flex: 1;
}

a {
    text-decoration: none;
}

.menu-left,
.menu-right {
    display: flex;
    flex-direction: row;
    width: 40%;
    align-items: center;
}

.menu-right {
    justify-content: flex-end;
    a {
        margin-left: 1.5em;
    }
    img {
        border-radius: 5px;
    }
}

.menu-left {
    justify-content: flex-start;
    a {
        margin-right: 1.5em;
    }
}

.icon {
    font-size: 1.8em;
}

#kids {
    line-height: 3.6rem;
}

.account-box {
    display: flex;
    align-items: center;
    .carret {
        color: white;
        margin-left: 5px;
    }
    margin-left: 1.5em;
}

.profile-dropdown {
    ul>li {
        list-style: none;
        font-family: Roboto;
    }
    background-color: rgba(10, 10, 10, 0.9);
    a {color:white;}
    width: 200px;
    position: absolute;
    top: 80px;
    right: 60px;
    z-index: 3;
    // padding: 15px 0px;
}

.user-account {
    img {
        border-radius: 5px;
        width: 30px;
        height: 30px;
        margin-right: 10px;
    }

    p{
        margin:0px;
        font-size: 13px;
    }
    padding: 0 20px;
    display:flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 5px;
}

.account-dropdown-container{

    display:flex;
    flex-direction: column;
    a{
        padding: 5px 0 5px 20px;
        font-size: 13px;
    }
}

.users-account-container:first-child {
    border-bottom: solid 1px #555;
    padding-bottom: 5px;
}


.users-account-container:nth-child(2) {
    padding-top: 5px;
    padding-bottom:10px;
}

